# Battleship.cpp

./: .gitignore  README.md
game/: CMakeLists.txt  README.md  compile_commands.json  sqlite
game.installer.deb/: README.md  create-installer.sh  create_installer.sh
game.installer.msi/: Game.Installer.Msi.sln  Game.Installer.Msi.wixproj  Product.wxs  README.md  Variables.wxi
game/libs/sqlite/: CMakeLists.txt
game/libs/sqlite/src/: sqlite3.h
game/src/console-ui/: CMakeLists.txt  app-config.json  main.cpp  map.txt
game/src/console-ui/exceptions/: invalid-input-exception.cpp  invalid-input-exception.h
game/src/console-ui/interfaces/: imaps.h  istatistics-ui.h
game/src/console-ui/models/: play-mode.h
game/src/console-ui/services/: console-cell-reader.cpp  console-cell-reader.h  console-initial-ship-arrangement.cpp  console-initial-ship-arrangement.h  console-map-observer.cpp  console-map-observer.h  console-map-state-observer.cpp  console-map-state-observer.h  console-ship-arrangement.cpp  console-ship-arrangement.h  statistics-observer.cpp  statistics-observer.h
game/src/console-ui/ui/: maps.cpp  maps.h  statistics-ui.cpp  statistics-ui.h
game/src/console-ui/utils/: map-utils.cpp  map-utils.h
game/src/core/: CMakeLists.txt
game/src/core/exceptions/: communication-exception.cpp  invalid-config-exception.cpp  tcp-exception.cpp  validation-exception.cpp
game/src/core/include/: app-config.h  battle-communication.h  battle-manager.h  cell-state.h  cell.h  communication-exception.h  computer-battle-communication-factory.h  computer-battle-communication.h  computer-ship-arrangement.h  constants.h  game-start-params.h  iapp-config.h  ibattle-communication-factory.h  ibattle-communication.h  ibattle-observer.h  icell-reader.h  iinitial-ship-arrangement.h  imap-state-observer.h  imapper.h  incoming-connection.h  invalid-config-exception.h  iship-arrangement.h  iship-manager.h  itcp-client.h  map-update-data.h  mapper.h  message-wrapper.h  network-battle-communication-factory.h  network-battle-communication.h  position.h  ship-coordinates.h  ship-manager.h  ship.h  ships.h  shoot-response.h  tcp-client.h  tcp-exception.h  validation-exception.h
game/src/core/infrastructure/: battle-manager.cpp  battle-manager.h  ship-manager.cpp  ship-manager.h
game/src/core/interfaces/: iinitial-ship-arrangement.h  imap-state-observer.h  iship-manager.h
game/src/core/models/: cell.cpp  position.h  ship-coordinates.h  ship.cpp  shoot-response.h
game/src/core/services/: app-config.cpp  battle-communication.cpp  computer-battle-communication-factory.cpp  computer-battle-communication.cpp  computer-ship-arrangement.cpp  network-battle-communication-factory.cpp  network-battle-communication.cpp  tcp-client.cpp  unix-tcp-client.cpp  windows-tcp-client.cpp
game/src/core/utils/: bool-random-generator.cpp  bool-random-generator.h  endian-checker.cpp  endian-checker.h  int-random-generator.h  text-utils.cpp  text-utils.h
game/src/statistics/: CMakeLists.txt
game/src/statistics/exceptions/: sql-exception.cpp
game/src/statistics/include/: database-service.h  db-record.h  idatabase-service.h  istatistics-service.h  player.h  queries.h  sql-exception.h  statistics-service.h
game/src/statistics/models/: player.cpp
game/src/statistics/services/: statistics-service.cpp
game/src/statistics/utils/: queries.cpp  queries.h  record-readers.cpp  record-readers.h
server/: Battleship.Server.csproj  (+5 more)
(+43 files in other folders)
